# nba-prop-prob-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  uvicorn.ini
backend/app/: config.py  copula.py  db.py  ingest.py  main.py  models.py  nlp.py  players.py  props.py  router_admin.py  router_chat.py  router_players.py  router_props.py  schemas.py  util_logging.py
backend/app/tests/: test_copula.py  test_nlp.py
backend/nba_prop_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: Chat.tsx  Heatmap.tsx  ParlayBuilder.tsx  PlayerSearch.tsx  ProbabilityCard.tsx  SeasonIngestPanel.tsx
frontend/src/lib/: api.ts
