[project]
name = "nba-prop-backend"
version = "0.1.0"
description = "FastAPI backend for NBA prop probabilities with copula SGP and chat"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "gunicorn>=22.0",
  "pydantic>=2.7",
  "pandas>=2.2",
  "numpy>=2.0",
  "scipy>=1.13",
  "sqlalchemy>=2.0",
  "nba_api>=1.4",
  "httpx>=0.27",
  "tenacity>=8.5",
  "python-dotenv>=1.0",
  "rapidfuzz>=3.9",
  "orjson>=3.10",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]